adapted code for this example

--- a/od_web_02_remote_mode_jee/src/main/webapp/index.html
+++ b/od_web_02_remote_mode_jee/src/main/webapp/index.html
@@ -8,33 +8,32 @@
     
     <script>
         require([ 'opendolphin' ], function (dol) {
-            // setting up the dolphin for a null url and not forcing a new session on load
-//            const dolphin = dol.dolphin(null, false);
-            const dolphin = dol.dolphin("http://localhost:8080/jeeapp1/dolphin", true);
+            // Set up the dolphin for regular remote mode with the appropriate URL
+            // forcing a new session on page reload:
+            const dolphin = dol.dolphin("http://localhost:8080/odwebjee/dolphin", true);
 
-            // create a presentation model
-
-            // make an attribute with name, qualifier, and initial value
+            // Make an attribute with name, no qualifier, and an empty String as initial value:
             const attribute = dolphin.attribute("myAttribute", undefined, "");
-            // and put it into a presentation model with no id and no type
-//            var pm = dolphin.presentationModel(undefined, undefined, attribute);
+
+            // ... and put it into a presentation model with id 'myPM' and no type
             var pm = dolphin.presentationModel("myPM", undefined, attribute);
 
 
-            // do the binding
-
-            // hold onto the html element to bind against
-            const myLabel  = document.getElementById("myLabel");
+            // Bind value of attribute to value of myLabel:
+            const myLabel = document.getElementById("myLabel");
 
             // bind value of attribute to value of myLabel
             attribute.onValueChange(function (event) {
                 myLabel.innerHTML = event.newValue;
             });
 
-            //..
+            // On button click send the 'makeItLonger' command to the server.
+            // The server will then change the value of the attribhute (see MakeItLongerAction.java), which causes the bound 'myLabel' to change.
+            // Note that the client does not need to send parameters. This is not necessary because open-dolphin always synchronizes the PMs between
+            // client and server in both directions.
+            // Note also that it is not necessary to implement nor call custom HTTP/REST services to provide the 'makeItLonger' functionality:
             const myButton = document.getElementById("myButton");
             myButton.onclick = function () {
-                //attribute.setValue(attribute.getValue() + ' bla');
                 dolphin.send("makeItLonger");
             };
 
