passing name of attribute to directive

--- a/od_web_angularjs_cso/index.html
+++ b/od_web_angularjs_cso/index.html
@@ -52,7 +52,7 @@
 
 <h1>Dolphin Model: <span id="myLabel">unchanged</span></h1>
 
-<odbind ng-model="firstName" pm="myPM"></odbind>
+<odbind ng-model="firstName" pm="myPM" attribute="myAttribute"></odbind>
 
 </body>
 </html>
