--- a/od_web_angularjs_cso/index.html
+++ b/od_web_angularjs_cso/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title></title>
-	<script type="text/javascript" src="libs/angularjs/1.2.16/angular.min.js"></script>
+	<script type="text/javascript" src="libs/angularjs/1.2.21/angular.min.js"></script>
 	<script type="text/javascript" src="js/app/main.js"></script>
 
     <!-- refer to OpenDolphin, see also http://open-dolphin.org/dolphin_website/Download.html -->
@@ -18,30 +18,13 @@
 			require([ 'opendolphin' ], function (dol) {
 				// Set up the dolphin for client-side only mode (first parameter url is null)
 				// and not forcing a new session on page reload (irrelevant for client side only mode):
-				const dolphin = dol.dolphin(null, false);
-				globalDolphin = dolphin;
+				globalDolphin = dol.dolphin(null, false);
 
 				// Make an attribute with name, no qualifier, and an empty String as initial value:
-				const attribute = dolphin.attribute("myAttribute", undefined, "");
+				const attribute = globalDolphin.attribute("myAttribute", undefined, "");
 
 				// ... and put it into a presentation model with id 'myPM' and no type
-				var pm = dolphin.presentationModel("myPM", undefined, attribute);
-
-
-				// Bind value of attribute to value of myLabel:
-				console.log("1");
-				const myLabel = document.getElementById("myLabel");
-				attribute.onValueChange(function (event) {
-					myLabel.innerHTML = event.newValue;
-				});
-				console.log("2");
-
-
-				// On button click change the value of the attribute, which causes the bound 'myLabel' to change:
-				const myButton = document.getElementById("myButton");
-				myButton.onclick = function () {
-					attribute.setValue(attribute.getValue() + ' longer');
-				};
+				var pm = globalDolphin.presentationModel("myPM", undefined, attribute);
 
 				angular.bootstrap(document, ['app']);
 
@@ -53,16 +36,12 @@
 
 </head>
 
-<!--<body ng-app="app">-->
-<body>
+<body ng-controller="DemoCtrl">
 
 <input type="text" ng-model="firstName">
 <h1>AngularJS Model: {{firstName}}</h1>
 
-
-<button id="myButton">add 'longer' to dolphin model</button>
-
-<h1>Dolphin Model: <span id="myLabel">unchanged</span></h1>
+<button ng-click="appendLonger()">add 'longer' to PM</button>
 
 <odbind ng-model="firstName" pm="myPM" attribute="myAttribute"></odbind>
 
