--- a/od_reactjs_cso/app/index.html
+++ b/od_reactjs_cso/app/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv='Content-type' content='text/html; charset=utf-8'>
-    <title>Basic Example with External JSX</title>
-    <link rel="stylesheet" href="../shared/css/base.css" />
-  </head>
+<head>
+	<meta http-equiv='Content-type' content='text/html; charset=utf-8'>
+	<title>Basic Example with External JSX</title>
+	<link rel="stylesheet" href="../shared/bootstrap-3.1.1-dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../shared/bootstrap-3.1.1-dist/css/bootstrap-theme.min.css">
+</head>
 
-  <body>
-    <h1>Basic Example with External JSX</h1>
+<body>
+    <h1><a href="http://www.open-dolphin.org">Open Dolphin</a> with <a href="http://facebook.github.io/react/index.html">React</a></h1>
     <div id="container">
       <p>
         If you can see this, React is not working right. This is probably because you&apos;re viewing
@@ -18,12 +19,6 @@
         and going to <a href="http://localhost:8000/">http://localhost:8000/</a>.
       </p>
     </div>
-    <h4>Example Details</h4>
-    <p>This is written with JSX in a separate file and transformed in the browser.</p>
-    <p>
-      Learn more about React at
-      <a href="http://facebook.github.io/react" target="_blank">facebook.github.io/react</a>.
-    </p>
     <script src="../shared/thirdparty/es5-shim.min.js"></script>
     <script src="../shared/thirdparty/es5-sham.min.js"></script>
     <script src="../shared/thirdparty/console-polyfill.js"></script>
