--- a/od_cors_example/standalone_client/sameorigin.html
+++ b/od_cors_example/standalone_client/sameorigin.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="webjars/bootstrap/3.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="webjars/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="http://localhost:8080/appContext/webjars/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://localhost:8080/appContext/webjars/bootstrap/3.3.1/css/bootstrap-theme.min.css">
 
     <title>Hello Dolphin</title>
     <!-- see build.gradle on how js artifacts are downloaded -->
-    <script type="text/javascript" src="generated/js/dolphin/opendolphin-0.12.0B1.js"></script>
-    <script type="text/javascript" src="js/app/api.js.jsp"></script>
+    <script type="text/javascript" src="http://localhost:8080/appContext/generated/js/dolphin/opendolphin.js"></script>
+    <script type="text/javascript" src="http://localhost:8080/appContext/js/app/api.js.jsp"></script>
 
-    
+
     <script>
         var odConfig = readDolphinConfig();
-        var ODAPI = odConfig.ODAPI
+        console.log("dolphin url:", odConfig.DOLPHIN_URL);
+        odConfig.DOLPHIN_URL = 'http://localhost:8080' + odConfig.DOLPHIN_URL
+        console.log("dolphin url:", odConfig.DOLPHIN_URL);
+        var ODAPI = odConfig.ODAPI;
 
         var nameTextField;
         var greetingLabel;
@@ -77,9 +80,9 @@
 <div class="container" role="main">
 
 
-<input id="nameTextField" type="text" value="">
-<button id="greetButton" class="btn btn-primary">Greet</button>
-<h1><span id="greetingLabel" class="label label-primary label-success">unchanged</span></h1>
+    <input id="nameTextField" type="text" value="">
+    <button id="greetButton" class="btn btn-primary">Greet</button>
+    <h1><span id="greetingLabel" class="label label-primary label-success">unchanged</span></h1>
 
 </div>
 
