--- a/od_cors_example/webapp/src/main/webapp/sameorigin.html
+++ b/od_cors_example/webapp/src/main/webapp/sameorigin.html
@@ -10,7 +10,7 @@
 
     <title>Hello Dolphin</title>
     <!-- see build.gradle on how js artifacts are downloaded -->
-    <script type="text/javascript" src="http://localhost:8080/appContext/generated/js/dolphin/opendolphin-0.12.0B1.js"></script>
+    <script type="text/javascript" src="http://localhost:8080/appContext/generated/js/dolphin/opendolphin.js"></script>
     <script type="text/javascript" src="http://localhost:8080/appContext/js/app/api.js.jsp"></script>
 
 
