--- a/od_cors_example/standalone_client/sc_cors.html
+++ b/od_cors_example/standalone_client/sc_cors.html
@@ -63,7 +63,7 @@
 
 
         // Get PMs and attributes:
-        var dolphin = opendolphin.dolphin(odConfig.DOLPHIN_URL, true, 300, true);
+        var dolphin = opendolphin.makeDolphin().url(odConfig.DOLPHIN_URL).reset(true).cors(true).build();
 
         dolphin.send(ODAPI.COMMAND_INIT, {
             onFinished: function(pms) {
