--- a/od_cors_example/standalone_client/hellodolphin_clientside_dolphinjs.html
+++ b/od_cors_example/standalone_client/hellodolphin_clientside_dolphinjs.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="http://localhost:8080/appContext/webjars/bootstrap/3.3.1/css/bootstrap-theme.min.css">
 
     <title>Hello Dolphin</title>
-    <!-- see build.gradle on how js artifacts are downloaded -->
-    <script type="text/javascript" src="opendolphin.js"></script>
+    <script type="text/javascript" src="opendolphin-1.0-RC2B3.js"></script>
     <script type="text/javascript" src="http://localhost:8080/appContext/js/app/api.js.jsp"></script>
 
 
@@ -61,9 +60,8 @@
             });
         }
 
-
-        // Get PMs and attributes:
-        var dolphin = opendolphin.makeDolphin().url(odConfig.DOLPHIN_URL).reset(true).build();
+        // Initialize dolphin:
+        var dolphin = opendolphin.makeDolphin().url(odConfig.DOLPHIN_URL).reset(true).supportCORS(false).build();
 
         dolphin.send(ODAPI.COMMAND_INIT, {
             onFinished: function(pms) {
